syntax = "proto3";
package agreementlog.v1;

import "google/api/annotations.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/descriptor.proto";
import "pagin.proto";

option go_package = "hope/api/novel/agreementlog/v1;v1";

// The AgreementLog service definition.
service AgreementLog {

  // 分页查询AgreementLog
  rpc GetPageAgreementLog (AgreementLogPageReq) returns (AgreementLogPageReply)  {
    option (google.api.http) = {
      get: "/v1/agreement/log/page"
    };
  }

  // 获取AgreementLog
  rpc GetAgreementLog (AgreementLogReq) returns (AgreementLogReply)  {
    option (google.api.http) = {
      get: "/v1/agreement/log/{id}"
    };
  }

  // 更新AgreementLog
  rpc UpdateAgreementLog (AgreementLogUpdateReq) returns (AgreementLogUpdateReply)  {
    option (google.api.http) = {
      put: "/v1/agreement/log/{id}"
      body: "*"
    };
  }

  // 创建AgreementLog
  rpc CreateAgreementLog (AgreementLogCreateReq) returns (AgreementLogCreateReply)  {
    option (google.api.http) = {
      post: "/v1/agreement/log"
      body: "*"
    };
  }

  // 删除AgreementLog
  rpc DeleteAgreementLog (AgreementLogDeleteReq) returns (AgreementLogDeleteReply)  {
    option (google.api.http) = {
      delete: "/v1/agreement/log/{id}"
    };
  }

  // 批量删除AgreementLog
  rpc BatchDeleteAgreementLog (AgreementLogBatchDeleteReq) returns (AgreementLogDeleteReply)  {
    option (google.api.http) = {
      delete: "/v1/agreement/log"
    };
  }

}

// 查询搜索请求
message AgreementLogPageReq {
    //分页查询参数
    pagin.Pagination pagin = 1;
    //查询条件参数
    AgreementLogReq param = 2;
}

// 查询搜索返回
message AgreementLogPageReply {
    //分页参数
    pagin.Pagination pagin = 1;
    //查询条目
    repeated AgreementLogReply items = 2;
}


// 查询搜索请求
message AgreementLogReq {
    int64 id = 1;
    //外部签约协议号
    string outerAgreementNo = 2;
    //订单号
    string orderId = 3;
    //用户ID
    int64 userId = 4;
    //渠道
    int64 chId = 5;
    //用户名称
    string userName = 6;
    //商品名称
    string paymentName = 7;
    //支付配置ID payment_config表的ID
    int64 paymentId = 8;
    //状态：1、待签约，2、签约成功，3、取消签约
    int32 state = 9;
    //每期扣款金额,单位：分
    int64 payment = 10;
    //支付方式：Alipay,Google,WeChat
    string agreementType = 11;
    //vip类型
    int64 vipType = 12;
    //第几期
    int64 times = 13;
    //周期天数
    int32 cycleDays = 14;
    //下次执行时间
    google.protobuf.Timestamp nextExecTime = 15;
    //备注
    string remark = 16;
    //创建时间
    google.protobuf.Timestamp createdAt = 17;
    //更新时间
    google.protobuf.Timestamp updatedAt = 18;
    //创建者
    int64 createBy = 19;
    //更新者
    int64 updateBy = 20;
    //租户
    int64 tenantId = 21;

}

// 查询搜索返回
message AgreementLogReply {
    int64 id = 1;
    //外部签约协议号
    string outerAgreementNo = 2;
    //订单号
    string orderId = 3;
    //用户ID
    int64 userId = 4;
    //渠道
    int64 chId = 5;
    //用户名称
    string userName = 6;
    //商品名称
    string paymentName = 7;
    //支付配置ID payment_config表的ID
    int64 paymentId = 8;
    //状态：1、待签约，2、签约成功，3、取消签约
    int32 state = 9;
    //每期扣款金额,单位：分
    int64 payment = 10;
    //支付方式：Alipay,Google,WeChat
    string agreementType = 11;
    //vip类型
    int64 vipType = 12;
    //第几期
    int64 times = 13;
    //周期天数
    int32 cycleDays = 14;
    //下次执行时间
    google.protobuf.Timestamp nextExecTime = 15;
    //备注
    string remark = 16;
    //创建时间
    google.protobuf.Timestamp createdAt = 17;
    //更新时间
    google.protobuf.Timestamp updatedAt = 18;
    //创建者
    int64 createBy = 19;
    //更新者
    int64 updateBy = 20;
    //租户
    int64 tenantId = 21;

}

// 创建AgreementLog请求
message AgreementLogCreateReq {
    //外部签约协议号
    string outerAgreementNo = 1;
    //订单号
    string orderId = 2;
    //用户ID
    int64 userId = 3;
    //渠道
    int64 chId = 4;
    //用户名称
    string userName = 5;
    //商品名称
    string paymentName = 6;
    //支付配置ID payment_config表的ID
    int64 paymentId = 7;
    //状态：1、待签约，2、签约成功，3、取消签约
    int32 state = 8;
    //每期扣款金额,单位：分
    int64 payment = 9;
    //支付方式：Alipay,Google,WeChat
    string agreementType = 10;
    //vip类型
    int64 vipType = 11;
    //第几期
    int64 times = 12;
    //周期天数
    int32 cycleDays = 13;
    //下次执行时间
    google.protobuf.Timestamp nextExecTime = 14;
    //备注
    string remark = 15;

}

// 创建AgreementLog返回
message AgreementLogCreateReply {
    int64 id = 1;
    //外部签约协议号
    string outerAgreementNo = 2;
    //订单号
    string orderId = 3;
    //用户ID
    int64 userId = 4;
    //渠道
    int64 chId = 5;
    //用户名称
    string userName = 6;
    //商品名称
    string paymentName = 7;
    //支付配置ID payment_config表的ID
    int64 paymentId = 8;
    //状态：1、待签约，2、签约成功，3、取消签约
    int32 state = 9;
    //每期扣款金额,单位：分
    int64 payment = 10;
    //支付方式：Alipay,Google,WeChat
    string agreementType = 11;
    //vip类型
    int64 vipType = 12;
    //第几期
    int64 times = 13;
    //周期天数
    int32 cycleDays = 14;
    //下次执行时间
    google.protobuf.Timestamp nextExecTime = 15;
    //备注
    string remark = 16;
    //创建时间
    google.protobuf.Timestamp createdAt = 17;
    //更新时间
    google.protobuf.Timestamp updatedAt = 18;
    //创建者
    int64 createBy = 19;
    //更新者
    int64 updateBy = 20;
    //租户
    int64 tenantId = 21;

}

// 更新AgreementLog请求
message AgreementLogUpdateReq {
    int64 id = 1;
    //外部签约协议号
    string outerAgreementNo = 2;
    //订单号
    string orderId = 3;
    //用户ID
    int64 userId = 4;
    //渠道
    int64 chId = 5;
    //用户名称
    string userName = 6;
    //商品名称
    string paymentName = 7;
    //支付配置ID payment_config表的ID
    int64 paymentId = 8;
    //状态：1、待签约，2、签约成功，3、取消签约
    int32 state = 9;
    //每期扣款金额,单位：分
    int64 payment = 10;
    //支付方式：Alipay,Google,WeChat
    string agreementType = 11;
    //vip类型
    int64 vipType = 12;
    //第几期
    int64 times = 13;
    //周期天数
    int32 cycleDays = 14;
    //下次执行时间
    google.protobuf.Timestamp nextExecTime = 15;
    //备注
    string remark = 16;

}


// 更新AgreementLog返回
message AgreementLogUpdateReply {
    int64 id = 1;
    //外部签约协议号
    string outerAgreementNo = 2;
    //订单号
    string orderId = 3;
    //用户ID
    int64 userId = 4;
    //渠道
    int64 chId = 5;
    //用户名称
    string userName = 6;
    //商品名称
    string paymentName = 7;
    //支付配置ID payment_config表的ID
    int64 paymentId = 8;
    //状态：1、待签约，2、签约成功，3、取消签约
    int32 state = 9;
    //每期扣款金额,单位：分
    int64 payment = 10;
    //支付方式：Alipay,Google,WeChat
    string agreementType = 11;
    //vip类型
    int64 vipType = 12;
    //第几期
    int64 times = 13;
    //周期天数
    int32 cycleDays = 14;
    //下次执行时间
    google.protobuf.Timestamp nextExecTime = 15;
    //备注
    string remark = 16;

}

// 删除AgreementLog请求
message AgreementLogDeleteReq {
    int64 id = 1;
}


// 批量删除AgreementLog请求
message AgreementLogBatchDeleteReq {
    repeated int64 ids = 1;
}


// 删除AgreementLog返回
message AgreementLogDeleteReply {
    bool result = 1;
}

